<resources>
    <string name="app_name">SmartChat</string>
    <string name="admobAppID">ca-app-pub-7784340036099888~5767402584</string>
    <string name="admobBannerADID">ca-app-pub-7784340036099888/1636585882</string>
    <string name="testadmobAppID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="testAdmobBannerAdID">ca-app-pub-3940256099942544/6300978111</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_add_new_post">Add New Post</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile_settings">Profile Settings</string>
    <string name="default_notification_channel_id">NM_CH_01</string>
    <string name="location">Location</string>
    <string name="name">Mary Jackson</string>
    <string name="user_name">User Name</string>
    <string name="posts">Posts</string>
    <string name="_5000">5000</string>
    <string name="followers">Followers</string>
    <string name="_23">23</string>
    <string name="following">Following</string>
    <string name="no_of_friends">No of Friends</string>
    <string name="_1120">1120</string>
    <string name="status">Status</string>
    <string name="profile_status">Profile Status</string>
    <string name="interested_in">Interested in</string>
    <string name="abstrac_algebra">Abstrac Algebra</string>
    <string name="my_location">My Location</string>
    <string name="phone">Phone</string>
    <string name="_09075380982">09075380982</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="_31_05_19">31/05/19</string>
    <string name="participants">Participants</string>
    <string name="exit_group">Exit group</string>
    <string name="published_a_new_post">published a new post</string>
    <string name="loading">Loading...</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="_0_likes">0 Likes</string>
    <string name="_0_comments">0 Comments</string>
    <string name="download">Download</string>
    <string name="_0_00">0:00</string>
    <string name="add_feed">Add Feed</string>
    <string name="feed_url">Feed Url</string>
    <string name="feed_title">Feed Title</string>
    <string name="feed_type">Feed Type</string>
    <string name="this_user_doesn_t_have_any_post_yet">This user doesn\'t have any post yet!</string>
    <string name="you_don_t_have_any_post_yet_n_click_the_add_button_below_to_add_a_post">You don\'t have any post yet!   Click the add button below to add a post.</string>
    <string name="only_admins_can_chat_in_this_group">Only admins can chat in this group</string>
    <string name="write_a_message">Write a message...</string>
    <string name="comments">COMMENTS</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="groups">Groups</string>
    <string name="add_feeds">Add Feeds</string>
    <string name="new_group">New Group</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="collection_name">Collection Name e.g Entertainment</string>
    <string name="group_image_change_info">Click on the image to change group image</string>
    <string name="group_name">Group Name e.g Sports</string>
    <string name="create_new_group">Create New Group</string>
    <string name="collection_image">Collection Image</string>
    <string name="could_join">Group open to anybody?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_group">Delete Group</string>
    <string name="update_collection">Update Collection</string>
    <string name="group_image">Group Image</string>
    <string name="your_post_will_be_deleted_after_1_year">Your post will be deleted after 1 year.</string>
    <string name="bundle_payment_info">Make Payment to the following details and enter your transaction ID below: \n\n Payment Name: Prince K. Telecom \n Payment Number: 0558776576</string>
    <string name="enter_transaction_id">Enter Transaction ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="proceed">Proceed</string>
    <string name="network_type">Network Type</string>
    <string name="data_bundle">Data Subscription</string>
    <string name="data_subscription">Data Subscription</string>
</resources>
