<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DataSub">

    <include
        android:id="@+id/toolbar"
        android:layout_height="55dp"
        android:layout_width="match_parent"
        layout="@layout/navigation_opener_toolbar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="fitXY"
        android:id="@+id/data_bundle_image"
        android:src="@drawable/smart_chat_data_bundles" />

    <android.support.design.widget.TextInputLayout
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:id="@+id/network_type_layout"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data_bundle_image"
            android:backgroundTint="@color/colorPrimaryDark">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/network_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/network_type"
                android:inputType="text"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:padding="15dp"
                android:background="@drawable/edit_text_outline"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:id="@+id/data_bundle_layout"
            android:layout_height="wrap_content"
            android:layout_below="@+id/network_type_layout"
            android:backgroundTint="@color/colorPrimaryDark">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/data_bundle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_bundle"
                android:inputType="text"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:padding="15dp"
                android:background="@drawable/edit_text_outline"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"/>

        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:id="@+id/full_name_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_bundle_layout"
        android:backgroundTint="@color/colorPrimaryDark">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/data_bundle_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="text"
            android:padding="15dp"
            android:background="@drawable/edit_text_outline"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:id="@+id/phone_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_name_text_input_layout"
        android:backgroundTint="@color/colorPrimaryDark">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/data_bundle_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="15dp"
            android:background="@drawable/edit_text_outline"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/transaction_payment_info"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/intro_title_color"
        android:text="@string/bundle_payment_info"
        android:layout_below="@+id/phone_text_input_layout"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:id="@+id/transaction_id_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transaction_payment_info"
        android:backgroundTint="@color/colorPrimaryDark">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/data_bundle_transaction_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_transaction_id"
            android:inputType="text"
            android:padding="15dp"
            android:background="@drawable/edit_text_outline"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_buy_data_bundle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login_style"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/intro_slide_bg_color"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/transaction_id_text_input_layout" />

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>